--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   font_awesome_flutter: ^8.10.0
   google_fonts: ^1.1.1
   get: ^3.22.2
+  getwidget: ^1.1.0
 
 dev_dependencies:
   flutter_test:
