--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   percent_indicator: ^2.1.8
   auto_size_text: ^2.1.0
   http: ^0.12.2
+  animated_text_kit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
