Pulls data from fake api, has loading spinner, implemented model for air data

--- a/assets/config.json
+++ b/assets/config.json
@@ -1,5 +1,5 @@
 {
-"use_test_data": true,
+"use_test_data": false,
 "aob":"https://my-json-server.typicode.com/roberteverman/demo/air",
 "gob":""
 }
