--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   auto_size_text: ^2.1.0
   http: ^0.12.2
   animated_text_kit: ^3.1.0
+  loading_animations: ^2.1.0
 
 dev_dependencies:
   flutter_test:
