--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.12.2
   animated_text_kit: ^3.1.0
   loading_animations: ^2.1.0
+  fluttertoast: ^7.1.6
 
 dev_dependencies:
   flutter_test:
